[gd_scene load_steps=3 format=3 uid="uid://ke83lndodr8n"]

[ext_resource type="Theme" uid="uid://bufd87u2vo210" path="res://Theme/MyTheme.tres" id="1"]
[ext_resource type="Script" path="res://Scripts/Tools/Examples/ExampleMainMenu.gd" id="2"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 1910.0
offset_bottom = 1070.0

[node name="Filler" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1712.0
offset_bottom = 1060.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
offset_left = 1716.0
offset_right = 1900.0
offset_bottom = 1060.0
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 447.0
offset_right = 184.0
offset_bottom = 528.0
text = "Start"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 532.0
offset_right = 184.0
offset_bottom = 613.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
